# OpenRouterFree

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  main.py  pyproject.toml  test_all.py
app/: config.py  main.py  models.py  proxy.py
docs/superpowers/plans/: 2026-05-17-openrouter-free-proxy.md
docs/superpowers/specs/: 2026-05-17-openrouter-free-proxy-design.md
tests/: conftest.py  test_api.py  test_models.py  test_proxy.py
