[project]
name = "openrouter-free"
version = "0.1.0"
description = "Proxy for OpenRouter free AI models with OpenAI-compatible API"
requires-python = ">=3.12"
authors = [
    { name = "StanleyChanH" },
]
license = "MIT"
keywords = ["openrouter", "openai", "free-models", "proxy", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.urls]
Repository = "https://github.com/StanleyChanH/OpenRouterFree"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
